# KVParser

./: .gitignore  KVParser.cabal  README.md
src/Data/: KVParser.hs
tools/: parse.hs
