name:                   KVParser
version:                0.0.1
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.8
build-type:             Simple

author:                 Andrew Darqui <andrew.darqui@gmail.com>
maintainer:             Andrew Darqui <andrew.darqui@gmail.com>
homepage:               github.com/adarqui/KVParser

category:               Data
synopsis:               Generic key value parser

Library
 hs-source-dirs:        src
 exposed-modules:
                        Data.KVParser

 build-depends:         base >= 3 && <5, bytestring, attoparsec, text, aeson, scientific, hashmap
 ghc-options:           -Wall -rtsopts

Executable              parse
 main-is:               parse.hs
 hs-source-dirs:        tools
 build-depends:         base >= 3 && <5, bytestring, KVParser
 ghc-options:           -Wall -threaded -rtsopts -O2
